# wincat-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE_MIT.md  README.md  build.zig  build.zig.zon
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml  zig.yml
src/: main.rs  main.zig
