[package]
name = "cat-win-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["handleapi", "winbase", "fileapi", "processenv"] }
structopt = "0.3"
anyhow = "1.0"
