[package]
name = "wincat"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
categories = ["command-line-utilities"]
keywords = ["cli", "command-line"]
readme = "README.md"
repository = "https://github.com/walker84837/wincat-rs"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "handleapi", "winbase", "fileapi", "processenv"] }
clap = { version = "4.5.2", features = ["derive"] }
anyhow = "1.0"
log = "0.4.21"
simple_logger = "5.0.0"
